2016-10-07  Natalia Portillo  <claunia@claunia.com>

	* Apple2.cs: Adds support for marshaling a whole disk, tracks
	and sectors as well as decoding sectors in 5and3 and 6and2
	GCRs.

	* AppleSony.cs: Adds support for marshaling a whole disk,
	tracks and sectors as well as decoding GCR sectors.

2016-08-22  Natalia Portillo  <claunia@claunia.com>

	* LisaTag.cs: Removed temporal variable.

2016-08-21  Natalia Portillo  <claunia@claunia.com>

	* LisaTag.cs:
	* DiscImageChef.Decoders.csproj: Separate Lisa tag decoding
	from Lisa filesystem and added Priam tags.

2016-08-18  Natalia Portillo  <claunia@claunia.com>

	* ATIP.cs: Make ATIP manufacturer resolver a public method.

	* Features.cs: Added HDBurn profiles.

	* Modes.cs: Corrected typo.

2016-08-09  Natalia Portillo  <claunia@claunia.com>

	* DiscImageChef.Decoders.csproj: Bumped version to 3.2.99.2.

2016-08-07  Natalia Portillo  <claunia@claunia.com>

	* DiscImageChef.Decoders.csproj: Public beta release 3.2.99.1.

2016-08-01  Natalia Portillo  <claunia@claunia.com>

	* AssemblyInfo.cs:
	* DiscImageChef.Decoders.csproj: Bumped to version 3.2.1.

2016-08-01  Natalia Portillo  <claunia@claunia.com>

	* AssemblyInfo.cs:
	* DiscImageChef.Decoders.csproj: Bump to version 3.2.0

2016-07-29  Natalia Portillo  <claunia@claunia.com>

	* DiscImageChef.Decoders.csproj: Bump to version 3.1.0.

2016-07-28  Natalia Portillo  <claunia@claunia.com>

	* Modes.cs:
	* BlockLimits.cs:
	* DensitySupport.cs:
	* DiscImageChef.Decoders.csproj: Code re-styling.

2016-07-28  Natalia Portillo  <claunia@claunia.com>

	* PMA.cs:
	* TOC.cs:
	* PFI.cs:
	* DMI.cs:
	* ATIP.cs:
	* DDS.cs:
	* PRI.cs:
	* RMD.cs:
	* BCA.cs:
	* UDI.cs:
	* ADIP.cs:
	* AACS.cs:
	* DMI.cs:
	* Enums.cs:
	* CPRM.cs:
	* Spare.cs:
	* EVPD.cs:
	* Enums.cs:
	* ISO.cs:
	* Errors.cs:
	* Enums.cs:
	* Modes.cs:
	* Sense.cs:
	* Types.cs:
	* DI.cs:
	* Session.cs:
	* FullTOC.cs:
	* Layers.cs:
	* BCA.cs:
	* DDS.cs:
	* CSS&CPRM.cs:
	* Inquiry.cs:
	* Identify.cs:
	* Enums.cs: